Menambahkan class target untuk link

--- a/public/index.html
+++ b/public/index.html
@@ -309,24 +309,24 @@
                     <h3 class="font-semibold text-xl text-white resource mb-5"> Resource</h3>
                     <ul>
                         <li>
-                            <a href="https://code.visualstudio.com/"
+                            <a href="https://code.visualstudio.com/" target="_blank"
                                 class="inline-block text-base hover:text-primary mb-3">
                                 Visual Studio Code
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.youtube.com/c/WebProgrammingUNPAS"
+                            <a href="https://www.youtube.com/c/WebProgrammingUNPAS" target="_blank"
                                 class="inline-block text-base hover:text-primary mb-3">
                                 WPU
                             </a>
                         </li>
                         <li>
-                            <a href="https://nodejs.org/en/" class="inline-block text-base hover:text-primary mb-3">
+                            <a href="https://nodejs.org/en/" target="_blank" class="inline-block text-base hover:text-primary mb-3">
                                 Node Js
                             </a>
                         </li>
                         <li>
-                            <a href="https://tailwindcss.com/" class="inline-block text-base hover:text-primary mb-3">
+                            <a href="https://tailwindcss.com/" target="_blank" class="inline-block text-base hover:text-primary mb-3">
                                 Tailwind
                             </a>
                         </li>
