--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
                     <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua
                         👋, Saya <span class="block font-bold text-slate-900 text-4xl 
                     mt-1"> Muhammad Faqyh</span></h1>
-                    <h2 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl">Web Develop & Creator</h2>
+                    <h2 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl">Web Programming & Creator</h2>
                     <p class="font-medium text-slate-400 mb-10 leading-relaxed">Selamat datang di website pribadi saya.
                     </p>
                     <div class="clock w-full self-center px-4 lg:w-1/2"">
