--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,7 @@
                             </svg>
                         </a>
                         <!-- Tiktok -->
-                        <a href="https://www.tiktok.com/@malkist19_" target="_blank"
+                        <a href="https://www.tiktok.com/@mfmpq" target="_blank"
                             class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white">
                             <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg">
